--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <main class="container mx-auto px-6 pt-24 md:pt-32">
 
         <!-- Hero Section -->
-        <section id="home" class="text-center py-20 md:py-32">
+       <section id="home" class="text-center py-20 md:py-32">
             <div class="relative inline-block">
                 <img src="assets/logo.png" 
                      onerror="this.onerror=null;this.src='https://placehold.co/160x160/1F2937/E5E7EB?text=Error';"
-                     alt="Mohamed Umar" class="rounded-full w-40 h-40 mx-auto mb-6 border-4 border-gray-700 shadow-xl hero-glow">
+                     alt="Mohamed Umar" class="rounded-full w-40 h-40 mx-auto mb-6 border-4 border-gray-700 shadow-xl hero-glow object-cover">
             </div>
             <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4">
                 Hi, I'm Mohamed Umar
@@ -68,9 +68,13 @@
             <p class="text-lg md:text-2xl text-blue-300 mb-8">
                 I'm a <span id="typewriter"></span><span class="typewriter-cursor"></span>
             </p>
-            <div class="flex justify-center space-x-4">
-                <a href="#projects" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full text-lg transition-transform transform hover:scale-105 shadow-lg">View My Work</a>
-                <a href="https://www.linkedin.com/in/mohamed-umar-750100243" target="_blank" class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-full text-lg transition-transform transform hover:scale-105 shadow-lg">View LinkedIn</a>
+            <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                <a href="#projects" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full text-lg transition-transform transform hover:scale-105 shadow-lg w-full sm:w-auto">View My Work</a>
+                <!-- MODIFIED: Added Download CV button -->
+                <a href="assets/Mohamed-Umar-Resume.pdf" download="Mohamed-Umar-Resume.pdf" class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-full text-lg transition-transform transform hover:scale-105 shadow-lg w-full sm:w-auto flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-download mr-2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" x2="12" y1="15" y2="3"/></svg>
+                    Download CV
+                </a>
             </div>
         </section>
 
