--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Certifications</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="flex flex-wrap justify-center gap-4 text-lg">
-                    <span class="bg-gray-700 text-blue-300 py-2 px-5 rounded-lg font-medium">Web Designing - Accord Info Matrix</span>
-                    <span class="bg-gray-700 text-blue-300 py-2 px-5 rounded-lg font-medium">DOTNET Technology - Accord Info Matrix</span>
+                    <a href="assets\ASP.NETCoreCertificate.jpg" target="_blank" rel="noopener noreferrer" class="bg-gray-700 text-blue-300 hover:bg-blue-600 hover:text-white transition-colors duration-300 py-2 px-5 rounded-lg font-medium">ASP.NET Core Web API - Udemy</a>
                     <a href="assets/cloud-computing-nptel.jpg" target="_blank" rel="noopener noreferrer" class="bg-gray-700 text-blue-300 hover:bg-blue-600 hover:text-white transition-colors duration-300 py-2 px-5 rounded-lg font-medium">Cloud Computing - NPTEL</a>
                     <a href="assets/sql-basics-certificate.jpg" target="_blank" rel="noopener noreferrer" class="bg-gray-700 text-blue-300 hover:bg-blue-600 hover:text-white transition-colors duration-300 py-2 px-5 rounded-lg font-medium">SQL Basics - Skill Rack</a>
                 </div>
